@startuml

namespace al5d {
    class AL5D {
        - joints : Joint[]
        - communicator : Communicator
        + {static} as_pointer(config : AL5DConfig) : AL5D*
        + angle_from_degrees(joint : JointType, degrees : Integer16) : JointTypeDegree
        + angle_from_pulse_width(joint : JointType, pulse_width : Integer16) : JointTypeDegree
        + connect(port : String, baud : Integer16) : void
        + disconnect() : void
    }

    class Joint {
        - board_channel : Integer8
        - min_pulse_width : Integer16
        - max_pulse_width : Integer16
        - min_degrees : Integer16
        - max_degrees : Integer16
        + get_angle_from_degrees(degrees : Integer16) : void
    }

    class AL5DConfig {
        - joint_configs : JointConfig[]
    }

    class JointConfig {
        - board_channel : Integer8
        - min_pulse_width : Integer16
        - max_pulse_width : Integer16
        - min_degrees : Integer16
        - max_degrees : Integer16
    }

    class Communicator {
        + transmit(message : String) : void
    }

    AL5D -> Joint
    Communicator <- AL5D
    Communicator <|-- SerialCommunicator
    AL5D -> AL5DConfig
    Joint -> JointConfig
    AL5DConfig --> JointConfig
}

@enduml
